bug fix : Cluster and namespaces header and row text should be left aligned

--- a/src/components/app/list/list.css
+++ b/src/components/app/list/list.css
@@ -156,7 +156,7 @@
     background-image: url('../../../assets/icons/appstatus/bg-white.svg');
 }
 
-.app-list__cell--env {
+.app-list__cell--env, .app-list__cell--cluster, .app-list__cell--namespace {
     flex-basis: 18%;
     justify-content: flex-start;
 }
